# local-git-mcp

./: .gitignore  README.md  install.sh  pyproject.toml  server.py  uninstall.sh
tests/: test_server.py
