[project]
name = "local-git-mcp"
version = "0.1.0"
description = "A local MCP server for git operations, designed for AI coding assistants in sandboxed environments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
local-git-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
