[project]
name = "local-git-mcp"
version = "0.1.0"
description = "A local MCP server for git operations, designed for AI coding assistants in sandboxed environments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    # >=1.9.4 fixes CVE-2025-53366 (DoS via malformed requests, CVSS 8.7)
    # >=1.23.0 fixes CVE-2025-66416 (DNS rebinding on localhost HTTP servers)
    "mcp[cli]>=1.23.0",
]

[project.scripts]
local-git-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
